# esp32-remote-watering

./: .gitignore  Cargo.toml
src/: lib.rs
web/: index.html  main.css  script.js  video-rtc.js
